# bookstack-video-service

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  README.md  SPEC.md  install.sh  pyproject.toml
bsvs/: __init__.py  config.py  main.py
bsvs/api/: ratelimit.py
bsvs/api/routes/: auth.py  embed.py  metrics.py  stream.py  videos.py
bsvs/auth/: __init__.py  signing.py
bsvs/bookstack/: __init__.py  client.py
bsvs/db/: __init__.py  base.py  database.py  models.py
bsvs/storage/: __init__.py  base.py  local.py  s3.py
bsvs/transcode/: __init__.py  ffmpeg.py  presets.py  tasks.py
bsvs/worker/: __init__.py  celery_app.py  tasks.py
dev-env/: .env.example  docker-compose.yml
docker/: .env.example  Dockerfile  Dockerfile.production  docker-compose.production.yml
web/static/js/: bookstack-plugin.js
web/templates/: admin.html  player.html  processing.html  upload.html
