[project]
name = "bsvs"
version = "0.1.0"
description = "BookStack Video Service - Self-hosted video hosting with BookStack integration"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "tallen"}
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "celery[redis]>=5.3.0",
    "ffmpeg-python>=0.2.0",
    "httpx>=0.26.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosqlite>=0.19.0",
    "aiofiles>=23.0.0",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
]
s3 = [
    "boto3>=1.34.0",
]
production = [
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.0",
    "boto3>=1.34.0",
]

[project.scripts]
bsvs = "bsvs.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
